// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns "undefined" if no next cell after two identical exist 1`] = `undefined`;

exports[`returns "undefined" if no next cell after two identical exist 2`] = `undefined`;

exports[`returns "undefined" if no next cell after two identical exist 3`] = `undefined`;

exports[`returns "undefined" if no next cell after two identical exist 4`] = `undefined`;

exports[`selects next cell after two identical 1`] = `1`;

exports[`selects next cell after two identical 2`] = `
[⬜] [⬜] [⬜] [⬜]
[🟥] [🟥] {⬜} [⬜]
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects next cell after two identical 3`] = `1`;

exports[`selects next cell after two identical 4`] = `
[⬜] [⬜] [⬜] [⬜]
[⬜] {⬜} [🟥] [🟥]
[⬜] [⬜] [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects next cell after two identical 5`] = `0`;

exports[`selects next cell after two identical 6`] = `
[⬜] [🟥] [⬜] [⬜]
[⬜] [🟥] [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] [⬜] [⬜] [⬜]
`;

exports[`selects next cell after two identical 7`] = `0`;

exports[`selects next cell after two identical 8`] = `
[⬜] [⬜] [⬜] [⬜]
[⬜] {⬜} [⬜] [⬜]
[⬜] [🟥] [⬜] [⬜]
[⬜] [🟥] [⬜] [⬜]
`;
